--- a/pokeworld/templates/web/home.tmpl
+++ b/pokeworld/templates/web/home.tmpl
@@ -4,6 +4,6 @@
     <title>{{ project }}</title>
 </head>
 <body>
-    This is just a test homepage. The name of this project is {{ project }}
+<a href="/rb/38#3,6">Start your adventure!</a>
 </body>
 </html>
