--- a/pokeworld/templates/web/home.tmpl
+++ b/pokeworld/templates/web/home.tmpl
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>{{ project }}</title>
+    <link rel="icon" href="/favicon.ico">
 </head>
 <body>
 <a href="/rb/38#3,6">Start your adventure!</a>
