--- a/pokeworld/templates/web/view_map.tmpl
+++ b/pokeworld/templates/web/view_map.tmpl
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="/static/css/view_map.css">
+<link rel="icon" href="/favicon.ico">
 <script src="/static/js/jquery.js"></script>
 <script type="text/javascript">
 {% if use_minimap %}
